# FXPP-Telegram-Bot

./: Userbot_activation_guide.md  generate_session.py  gitignore  login_webapp.py  pyproject.toml  render.yaml  replit.md  requirements.txt  telegram_bot.py  userbot_guide.md  userbot_service.py
FXPP python files/: install.sh  main.py  telegram_bot.py
src/: bot.py  main.py  trading_bot.session  trading_bot.session-journal
src/core/: engine.py
src/database/: manager.py
src/features/commands/: active_trades.py  clear_member.py  db_status.py  dm_messages.py  dm_status.py  entry.py  free_trial.py  free_trial_users.py  new_members.py  peer_id.py  price_test.py  retract_trial.py  send_welcome_dm.py  status.py  trade_override.py
src/features/community/: dm_manager.py  handlers.py  scheduler.py  trial_manager.py
src/features/core/: config.py  engine.py  logger.py
src/features/database/: manager.py  schema.py
src/features/loops/: daily_trial_offers.py  engagement_tracking.py  followup_dms.py  monday_activation.py  peer_id_escalation.py  preexpiration_warnings.py  price_tracking.py  trial_expiry.py  welcome_dm_retry.py
src/features/trading/: engine.py  handlers.py  hit_detector.py  price_tracker.py
src/handlers/: admin.py  community.py  trading.py
src/src/core/: config.py
